src/App.css
/* ... */
.arrowRight{
  width: 35px;
  height: 35px;
  color: var(--deep-sky-blue-two);
  align-items: flex-end;
}

.listJobNumbers{
  border:solid;
  width: 100px;
  z-index:3;
  height: 100px;
}

/* loading dots */
.loading:after {
  content: ' .';
  animation: dots 3.5s steps(5, end) infinite;}

@keyframes dots {
  0%, 20% {
    color: rgba(0,0,0,0);
    text-shadow:
      .25em 0 0 rgba(0,0,0,0),
      .5em 0 0 rgba(0,0,0,0);}
  40% {
    color: white;
    text-shadow:
      .25em 0 0 rgba(0,0,0,0),
      .5em 0 0 rgba(0,0,0,0);}
  60% {
    text-shadow:
      .25em 0 0 white,
      .5em 0 0 rgba(0,0,0,0);}
  80%, 100% {
    text-shadow:
      .25em 0 0 white,
      .5em 0 0 white;}
}
/* end of loading dots */
.dropDownList{
  display:flex;
  justify-content:flex-start;
}

